--- a/luizalabs-server-rest/src/main/resources/application.properties
+++ b/luizalabs-server-rest/src/main/resources/application.properties
@@ -2,9 +2,9 @@
 server.port=3000
 
 ## Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/luizalabs
-spring.datasource.username=dev
-spring.datasource.password=dev
+spring.datasource.url=jdbc:postgresql://postgres-server:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=luizalabs
 
 spring.jpa.properties.hibernate.default_schema=luizalabs
 
