feat: adição da tabela client_has_product e refact no codigo    - no script do banco foi adicionadoa criação da tabela: client_has_product    - dois novos endpoints:       - /api/v1/client/products/{client_id}: add os produtos favoritos 	ao cliente.       - /api/v1/product/client/{id}: retorna a lista de produtos 	favoritos de um cliente.    - foi revisado alguns mapeamentos também, criandos os pacotes request      e response dentro da controller, para mapear melhor o que cada      endpoint precisa receber e o que realmente é necessário enviar de      volta. Evitando mostrar informações campo a mais na api.

--- a/luizalabs-server-rest/src/main/resources/application.properties
+++ b/luizalabs-server-rest/src/main/resources/application.properties
@@ -2,9 +2,10 @@
 server.port=3000
 
 ## Database
-spring.datasource.url=jdbc:postgresql://postgres-server:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=luizalabs
+spring.datasource.url=jdbc:postgresql://localhost:5432/luizalabs
+spring.datasource.username=dev
+spring.datasource.password=dev
 
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.default_schema=luizalabs
 
