feat: cfg ambiente docker + k8s + Google Cloud + validacao    - pasta k8s:       - arquivos que contem 'deployment' no nome, foi feito a cfg de         qual imagem esses conteiners vão usar, qual porta, nome, label,         sistema de restart, etc.       - arquivos que contem 'service' no nome, foram para configurar o         Loadbalance, liberação de portas, nome, label, etc.       - arquivo que tem 'storage', foi feito armazenamento de dados do         postgres.    - refact do docker-compose.yml:       - add controle de restart (em casos de erro), depdencia do         postgres por parte da API (rodar o postgres primeiro), nova         release, revisao das portas.    - refact Dockerfile:       - apenas deixando comentado o expose de porta e adicionando o         diretório para volume.    - validacao:       - foi colocado validação no sistema de para não ter duas contas         com o mesmo username, ou dois clientes com o mesmo email.    - database:       - removendo o script do banco de resources, pois a propria         aplicação irá criar o banco agora, alterando o properties:            - spring.jpa.hibernate.ddl-auto=update

--- a/luizalabs-server-rest/docker-compose.yml
+++ b/luizalabs-server-rest/docker-compose.yml
@@ -1,14 +1,17 @@
 version: '3'
 services:
+  luizalabs-api:
+    image: ensleyribeiro/luizalabs-api:0.0.2-SNAPSHOT
+    #build: .
+    restart: always
+    depends_on:
+      - postgres-server
+    ports:
+      - "3000:3000"
   postgres-server:
     image: 'postgres:latest'
+    restart: always
     environment:
       POSTGRES_PASSWORD: "luizalabs"
     ports:
-    - "5431:5432"
-    volumes:
-      - ./src/main/resources/db/migration/V1_init.sql:/docker-entrypoint-initdb.d/1-schema.sql
-  luizalabs-api:
-    build: .
-    ports:
-    - "3000:3000"
+    - "5432:5432"
