--- a/luizalabs-server-rest/src/main/resources/application.properties
+++ b/luizalabs-server-rest/src/main/resources/application.properties
@@ -2,10 +2,12 @@
 server.port=3000
 
 ## Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/luizalabs
-spring.datasource.username=dev
-spring.datasource.password=dev
+##spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://postgres-server:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=luizalabs
 
+spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.default_schema=luizalabs
+spring.jpa.properties.hibernate.default_schema=public
 
