--- a/luizalabs-server-rest/pom.xml
+++ b/luizalabs-server-rest/pom.xml
@@ -112,7 +112,7 @@
 				</executions>
 				<configuration>
 					<repository>ensleyribeiro/${project.name}</repository>
-					<tag>${project.version}</tag>
+					<tag>latest</tag>
 					<skipDockerInfo>true</skipDockerInfo>
 				</configuration>
 			</plugin>
