refact: baixar a imagem da ultima versao do projeto    - tinha colocado para pegar da tag 'latest', mas coloquei pra pegar      da propria versão do projeto.

--- a/luizalabs-server-rest/k8s/luizalabs-api-deployment.yaml
+++ b/luizalabs-server-rest/k8s/luizalabs-api-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         io.kompose.service: luizalabs-api
     spec:
       containers:
-      - image: ensleyribeiro/luizalabs-api:latest
+      - image: ensleyribeiro/luizalabs-api:0.0.3-RELEASE
         imagePullPolicy: ""
         name: luizalabs-api
         ports:
