--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services:
   - docker
 env:
   global:
-    - SHA=$(git rev-parse HEAD)
+    - PROJECT_VERSION=0.0.3-RELEASE
     - CLOUDSDK_CORE_DISABLE_PROMPTS=1
     - CLOUDSDK_PYTHON=python2.7
 before_install:
