--- a/luizalabs-server-rest/Dockerfile
+++ b/luizalabs-server-rest/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8
-COPY target/luizalabs-server-rest-0.0.2-SNAPSHOT.jar /app.jar
+COPY target/luizalabs-server-rest-0.0.3-RELEASE.jar /app.jar
 VOLUME /tmp
 #EXPOSE 3000/tcp
 ENTRYPOINT ["java", "-jar", "/app.jar"]
