--- a/luizalabs-server-rest/src/main/resources/application.properties
+++ b/luizalabs-server-rest/src/main/resources/application.properties
@@ -7,6 +7,7 @@ spring.datasource.url=jdbc:postgresql://postgres-server:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=luizalabs
 
+spring.jpa.database=POSTGRESQL
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.default_schema=public
