tests: add resultados dos testes da API usando postman + refact    - Foi colocado o resultado do test_run do postman dentro da pasta      /docs/postman.    - Versão da aplicação foi alterada para 0.0.4    - Arquivos de teste da API usando o postman tambem foram atualizado.    - Foi adicionando a validação para não ser enviado página negativa na      hora de buscar os produtos por página.

--- a/luizalabs-server-rest/Dockerfile
+++ b/luizalabs-server-rest/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:8
-COPY target/luizalabs-server-rest-0.0.3-RELEASE.jar /app.jar
+COPY target/luizalabs-server-rest-0.0.4.jar /app.jar
 VOLUME /tmp
 #EXPOSE 3000/tcp
 ENTRYPOINT ["java", "-jar", "/app.jar"]
