--- a/luizalabs-server-rest/k8s/luizalabs-api-deployment.yaml
+++ b/luizalabs-server-rest/k8s/luizalabs-api-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         io.kompose.service: luizalabs-api
     spec:
       containers:
-      - image: ensleyribeiro/luizalabs-api:0.0.3-RELEASE
+      - image: ensleyribeiro/luizalabs-api:0.0.4
         imagePullPolicy: ""
         name: luizalabs-api
         ports:
