--- a/luizalabs-server-rest/docker-compose.yml
+++ b/luizalabs-server-rest/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   luizalabs-api:
-    image: ensleyribeiro/luizalabs-api:0.0.3-RELEASE
+    image: ensleyribeiro/luizalabs-api:0.0.4
     #build: .
     restart: always
     depends_on:
