--- a/luizalabs-server-rest/pom.xml
+++ b/luizalabs-server-rest/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>br.com</groupId>
 	<artifactId>luizalabs-server-rest</artifactId>
-	<version>0.0.4</version>
+	<version>0.0.4-RELEASE</version>
 	<name>luizalabs-api</name>
 	<description>API rest do desafio</description>
 
