--- a/luizalabs-server-rest/src/main/resources/application.properties
+++ b/luizalabs-server-rest/src/main/resources/application.properties
@@ -2,8 +2,8 @@
 server.port=3000
 
 ## Database
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-##spring.datasource.url=jdbc:postgresql://postgres-server:5432/postgres
+## spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.url=jdbc:postgresql://postgres-server:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=luizalabs
 
